--- a/index.html
+++ b/index.html
@@ -15,18 +15,20 @@
   </style>
 </head>
 <body>
-  Daniel Clifford
-  Verified Graduate
-
-  I received a job offer mid-course, and the subjects I learned were current, if not more so, 
-  in the company I joined. I honestly feel I got every penny’s worth.
-
-  “ I was an EMT for many years before I joined the bootcamp. I’ve been looking to make a 
-  transition and have heard some people who had an amazing experience here. I signed up 
-  for the free intro course and found it incredibly fun! I enrolled shortly thereafter. 
-  The next 12 weeks was the best - and most grueling - time of my life. Since completing 
-  the course, I’ve successfully switched careers, working as a Software Engineer at a VR startup. ”
-
+  <div class="Daniel">Daniel Clifford
+    Verified Graduate
+  
+    I received a job offer mid-course, and the subjects I learned were current, if not more so, 
+    in the company I joined. I honestly feel I got every penny’s worth.
+  
+    “ I was an EMT for many years before I joined the bootcamp. I’ve been looking to make a 
+    transition and have heard some people who had an amazing experience here. I signed up 
+    for the free intro course and found it incredibly fun! I enrolled shortly thereafter. 
+    The next 12 weeks was the best - and most grueling - time of my life. Since completing 
+    the course, I’ve successfully switched careers, working as a Software Engineer at a VR startup. ”
+  </div>
+  
+  <div class="Jonathan">
   Jonathan Walters
   Verified Graduate
 
@@ -34,7 +36,8 @@
 
   “ I started as a total newbie with virtually no coding skills. I now work as a mobile engineer 
   for a big company. This was one of the best investments I’ve made in myself. ”
-
+  </div>
+  <div class="Jeanette">
   Jeanette Harmon
   Verified Graduate
 
@@ -42,7 +45,8 @@
 
   “ Thank you for the wonderful experience! I now have a job I really enjoy, and make a good living 
   while doing something I love. ”
-
+  </div>
+  <div class="Patrick">
   Patrick Abrams
   Verified Graduate
 
@@ -53,7 +57,8 @@
   gave me the confidence necessary to be able to go out in the world and present myself as a capable 
   junior developer. The standard is above the rest. You will get the personal attention you need from 
   an incredible community of smart and amazing people. ”
-
+  </div>
+  <div class="Kira">
   Kira Whittle
   Verified Graduate
 
@@ -67,7 +72,7 @@
   could ever have. In fact, I’ve often referred to it during interviews as an example of my developent 
   experience. It certainly helped me land a job as a full-stack developer after receiving multiple offers. 
   100% recommend! ”
-  
+  </div>
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Your Name Here</a>.
