added images to the testimonial profiles

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   
-  <title>Frontend Mentor | [Challenge Name Here]</title>
+  <title>Frontend Mentor | Testimonial Challenge</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
@@ -18,7 +18,11 @@
 </head>
 <body>
   <div class="Daniel">
-    <h1>Daniel Clifford</h1>
+    
+    <h1>
+      <img src="/mod2/testimonials-grid-section-main/images/image-daniel.jpg" alt="Daniel Clifford Image">
+      Daniel Clifford
+    </h1>
       <h2>Verified Graduate</h2>
   
         <h3>I received a job offer mid-course, and the subjects I learned were current, if not more so, 
@@ -34,6 +38,7 @@
   
   <div class="Jonathan">
     <h1>
+      <img src="/mod2/testimonials-grid-section-main/images/image-jonathan.jpg" alt="Jonathan Walters Image">
       Jonathan Walters
     </h1>
       <h2>
@@ -49,6 +54,7 @@
   </div>
   <div class="Jeanette">
     <h1>
+      <img src="/mod2/testimonials-grid-section-main/images/image-jeanette.jpg" alt="Jeanette Harmon Image">
       Jeanette Harmon
     </h1>
       <h2>
@@ -64,6 +70,7 @@
   </div>
   <div class="Patrick">
       <h1>
+        <img src="/mod2/testimonials-grid-section-main/images/image-patrick.jpg" alt="Patrick Abrams Image">
         Patrick Abrams
       </h1>
         <h2>
@@ -82,6 +89,7 @@
   </div>
   <div class="Kira">
       <h1>
+        <img src="/mod2/testimonials-grid-section-main/images/image-kira.jpg" alt="Kira Whittle Image">
         Kira Whittle
       </h1>
         <h2>
